@@ -1,3 +1,12 @@
+2002-03-30  Lauris Kaplinski  <lauris@ximian.com>
+
+	* service-info.c: Added ghelp
+	(service_info_using_custom_app): Fix crash
+
+	* mime-type-info.c (mime_type_info_save): Strip starting slash
+
+	* mime-edit-dialog.c (store_data): Strip starting slash
+
 2002-03-08  Lauris Kaplinski  <lauris@ximian.com>
 
 	* mime-type-info.c (mime_type_info_using_custom_app): Return TRUE
